// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinearProgress /> should render accent 1`] = `
<LinearProgress
  accent={true}
  progress={0.5}
>
  <div
    className="mdc-linear-progress mdc-linear-progress--accent"
    role="progressbar"
  >
    <div
      className="mdc-linear-progress__buffering-dots"
    />
    <div
      className="mdc-linear-progress__buffer"
    />
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</LinearProgress>
`;

exports[`<LinearProgress /> should render indeterminate 1`] = `
<LinearProgress
  indeterminate={true}
>
  <div
    className="mdc-linear-progress"
    role="progressbar"
  >
    <div
      className="mdc-linear-progress__buffering-dots"
    />
    <div
      className="mdc-linear-progress__buffer"
    />
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</LinearProgress>
`;

exports[`<LinearProgress /> should render indeterminate accent 1`] = `
<LinearProgress
  accent={true}
  indeterminate={true}
>
  <div
    className="mdc-linear-progress mdc-linear-progress--accent"
    role="progressbar"
  >
    <div
      className="mdc-linear-progress__buffering-dots"
    />
    <div
      className="mdc-linear-progress__buffer"
    />
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</LinearProgress>
`;

exports[`<LinearProgress /> should render indeterminate reversed 1`] = `
<LinearProgress
  indeterminate={true}
  reversed={true}
>
  <div
    className="mdc-linear-progress"
    role="progressbar"
  >
    <div
      className="mdc-linear-progress__buffering-dots"
    />
    <div
      className="mdc-linear-progress__buffer"
    />
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</LinearProgress>
`;

exports[`<LinearProgress /> should render with buffer 1`] = `
<LinearProgress
  buffer={0.8}
  progress={0.5}
>
  <div
    className="mdc-linear-progress"
    role="progressbar"
  >
    <div
      className="mdc-linear-progress__buffering-dots"
    />
    <div
      className="mdc-linear-progress__buffer"
    />
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</LinearProgress>
`;

exports[`<LinearProgress /> should render with buffer accent 1`] = `
<LinearProgress
  accent={true}
  buffer={0.8}
  progress={0.5}
>
  <div
    className="mdc-linear-progress mdc-linear-progress--accent"
    role="progressbar"
  >
    <div
      className="mdc-linear-progress__buffering-dots"
    />
    <div
      className="mdc-linear-progress__buffer"
    />
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</LinearProgress>
`;

exports[`<LinearProgress /> should render with buffer reversed 1`] = `
<LinearProgress
  buffer={0.8}
  progress={0.5}
  reversed={true}
>
  <div
    className="mdc-linear-progress"
    role="progressbar"
  >
    <div
      className="mdc-linear-progress__buffering-dots"
    />
    <div
      className="mdc-linear-progress__buffer"
    />
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</LinearProgress>
`;

exports[`<LinearProgress /> should render with progress 1`] = `
<LinearProgress
  progress={0.5}
>
  <div
    className="mdc-linear-progress"
    role="progressbar"
  >
    <div
      className="mdc-linear-progress__buffering-dots"
    />
    <div
      className="mdc-linear-progress__buffer"
    />
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      className="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <span
        className="mdc-linear-progress__bar-inner"
      />
    </div>
  </div>
</LinearProgress>
`;
